--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,26 @@ label{
 .buttons{
     padding: 1rem;
 }
-
-h2{
+.numbers{
+    display: flex;
+    flex-direction: row;
+   align-items: center;
+}
+#num{
+    text-align: center;
+}
+.styleMemory{
+    display: flex;
+    flex-direction: row;
+    margin-left: 5rem;
+}
+.memory{
+    font-style: italic;
+}
+#memoryResult{
+    padding-left: 1rem;
+}
+#finalResult{
     background-color: #fff;
     text-align: center;
     width: 80%;
